change title value

--- a/human-resources-project/public/index.html
+++ b/human-resources-project/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
    
-    <title>Human Resources Projects</title>
+    <title>Human Resources Projects * HRP</title>
   </head>
   <body>
     <div id="root"></div>
